# minisweep

./: .gitignore  CMakeLists.txt
scripts/: cmake_hip.sh
src/1_base/: arguments.cpp  arguments.h  env.cpp  env.h  env_assert.cpp  env_assert_kernels.h  env_cuda.h  env_cuda_kernels.h  env_hip.cpp  env_mic_kernels.h  env_mpi.cpp  env_mpi.h  env_openmp_kernels.h  env_types.h  pointer.cpp  pointer.h  pointer_kernels.h  types_kernels.h
src/2_sweeper_base/: array_accessors_kernels.h  array_operations.cpp  array_operations.h  definitions_kernels.h  dimensions.cpp  dimensions.h  dimensions_kernels.h
src/3_sweeper/: faces_kba.cpp  faces_kba.h  quantities_testing.h  quantities_testing_c.h  quantities_testing_kernels.h  stepscheduler_kba.cpp  stepscheduler_kba.h  stepscheduler_kba_kernels.h  sweeper_kba.h  sweeper_kba_c.h  sweeper_kba_c_kernels.h  sweeper_kba_kernels.h  sweeper_simple.h  sweeper_simple_c.h  sweeper_tileoctants.h  sweeper_tileoctants_c.h
src/4_driver/: runner.cpp  runner.h  tester.cpp
